samples/_failures_safe/1761455834_97786d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_06a0e823.c: In function ‘display_statistics’:
./samples/SAFE/__tmp_06a0e823.c:162:11: error: expected ‘;’ at end of input
  162 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_06a0e823.c:162:5: error: expected declaration or statement at end of input
  162 |     printf
      |     ^~~~~~
